footer alignment fix

--- a/assets/sass/style/_layout.scss
+++ b/assets/sass/style/_layout.scss
@@ -177,6 +177,9 @@
     justify-content: space-between;
     align-items: center;
   }
+  &-col {
+    width: 281px;
+  }
   &-contacts {
     padding: 72px 1rem;
     &-menu {
